refactor code and fix tests